tests/fixtures/invalid/round_str_bool.py
# Cannot call round() with Str, Bool
x = round("hello", True)
